Measure text autosizing in the wild

This patch re-adds the TextAutosizing UseCounter metric to measure the
percentage of pages which actually autosize. This has been put in
TextAutosizer::inflate instead of TextAutosizer::applyMultiplier because
the latter is called much more often and a branch could affect
performance.

https://www.chromestatus.com/metrics/feature/timeline/popularity/274

BUG=615536

Review-Url: https://codereview.chromium.org/2023553002
Cr-Commit-Position: refs/heads/master@{#396607}

Former-commit-id: 66d915b57a58f1a7ac96470af1d0abb1531d80b4